# Preuves

./: .merlin  .ocamldebug  .ocamlinit  LICENSE.txt  Makefile  README.md  Session.vim  TASKS  TODO  client  client1  client2  client3  client4  clientI  clientON  clientONL123  clientONL1234  client_options_notations  dune-project  myocamlbuild.ml  serv
Ensembles/: ensembles.ml
Ensembles/test/: test_ensembles.ml
_build/default/first_order/: .merlin
_build/default/prop/: .merlin
_build/default/server/: .merlin
first_order/: .merlin  .notations.ml.swp  base_term.ml  base_term.mli  dune  first_order_axioms.ml  first_order_parser.dyp  formula.ml  formula.mli  lexer.mll  parser.mly  schemas.ml  signature.ml  terme.ml  test.ml  theory.ml
first_order/test/: .merlin  dune  test_formula_first_order.ml  test_schemas_first_order.ml
kernel/: dune  logic.ml
kernel/kernel_prop/: compile.ml  compile.mli  dune  kernel_prop_proof.ml  verif.ml  verif.mli
kernel/kernel_prop/test/: .test_compile.ml.swp  dune  test_compile.ml  test_compile_S1.ml  test_kernel_prop_proof.ml
kernel/logic/: dune  first_order.ml  logic2.ml  pFormula.ml  prop.ml  prop.mli  prop_parser.dyp  prop_parser.dyp.orig
kernel/prop/compile/: .verif.ml.swp  ast.ml  compile.ml  compile.mli  compile_formula.ml  dune  prop_parser.dyp  step.ml  theorem_compile.ml  theory.ml  verif.ml  verif.mli
kernel/prop/compile/test/: dune  test_compile.ml  test_compile_S1.ml
kernel/prop/interp/: axioms.ml  axioms_prop.ml  dune  formula_prop.ml  formula_prop.mli  instance_notation_printers.ml  instance_notation_printers.mli  kernel_theorem_prop.ml  kind_prop.ml  parser.dyp  prop_parser.dyp  prop_theory.ml  substitution.ml  substitution_prop.ml  theorem.ml  theorem_prop.ml  theorems.ml  theory.ml  verif.ml
kernel/prop/interp/test/: dune  test_S1.ml  test_formula_prop.ml  test_formula_prop_parser.ml  test_notation.ml  test_proof_prop.ml
kernel_prop/: dune  kernel_prop_proof.ml
kernel_prop/test/: dune
premier_ordre/: axiomes_premier_ordre.ml  base_terme.ml  base_terme.mli  chapitre.mli  formule.ml  formule.mli  lexer.mll  notations.ml  parser.mly  schemas.ml  signature.ml  terme.ml  test.ml  test_schemas.ml  theorie.ml
prop/: .merlin  axiomes_prop.ml  axioms_prop.ml  dune  formula_prop.ml  formula_prop.mli  formula_tooling.ml  formula_tooling.mli  formule_prop.ml  formule_prop.mli  kind_prop.mli  myocamlbuild.ml  parser.dyp  proof_prop.ml  propParser.mly  prop_parser.dyp  substitution_prop.ml  theorem_prop.ml  theorems.ml  verif.ml
prop/test/: .merlin  dune  prop_test.ml  test_S1.ml  test_formula_prop.ml  test_formula_prop_parser.ml  test_notation.ml  test_proof_prop.ml
sample_theories/: Bourbaki.prf  Bourbaki_Options.prf  Bourbaki_S1.prf  Bourbaki_S2.prf  Bourbaki_S4.prf  Bourbaki_notation.prf
server/: .merlin  .ocamlinit  dune  modes.ml  proof_server.ml  proof_server.mli  protocol.ml  protocol_commands.ml  protocol_commands.mli  protocol_lexer.mll  protocol_parser.mly  server_protocol.proto  session.ml
theories/: 1Bourbaki_Options.prf  3Bourbaki_Logic.prf  Bourbaki_C1.prf  Bourbaki_Logic.prf  Bourbaki_Notations.prf  Bourbaki_Options.prf  Bourbaki_S2.prf  Bourbaki_S3.prf  Bourbaki_S4.prf  theorie
theory/: Bourbaki.prf  Bourbaki_C10.prf  Bourbaki_C11.prf  Bourbaki_C12.prf  Bourbaki_C13.prf  Bourbaki_C6.prf  Bourbaki_C7.prf  Bourbaki_C8.prf  Bourbaki_C9.prf  Bourbaki_Logic.prf  Bourbaki_Options.prf  Bourbaki_S1.prf  Bourbaki_S3.prf  Bourbaki_S4.prf  Bourbaki_axioms.prf  Bourbaki_contradiction.prf
util/: .merlin  curry_howard.ml  dune  unix_tools.ml  util.ml
