(env
 (dev
  (flags (:standard -w -8-27))))

(library 
 (name first_order)
 (instrumentation (backend bisect_ppx))
 (modules (:standard))
 (libraries kernel_prop_interp utilities dyp))

(rule
 (targets first_order_parser.ml)
 (deps    (:input-file first_order_parser.dyp))
 (action  (chdir %{project_root} (run %{bin:dypgen}  --noemit-token-type --no-pp --no-obj-type --no-mli %{input-file}))))
