(env
  (dev
    (flags (:standard -warn-error -8))))

(ocamlyacc protocol_parser)
(ocamllex protocol_lexer)

;;(library 
;; (name server)
;; (modules (:standard))
;; (libraries str first_order util)
;;)


(executable 
  (name proof_server)
  (modes byte exe)
  (modules (:standard))
  (libraries ocaml-protoc mtime mtime.clock.os cmdliner logs logs.cli logs.fmt fmt.cli str first_order util kernel_prop)
)

;;From https://gist.github.com/Leonidas-from-XIV/48b483dc491a31a26a95f20e11b41321
(rule
  (targets server_protocol_types.mli
             server_protocol_types.ml
             server_protocol_pb.mli
             server_protocol_pb.ml
             server_protocol_pp.mli
             server_protocol_pp.ml)
  (deps    server_protocol.proto)
  (action (run ocaml-protoc -int32_type int_t -int64_type int_t -ml_out . %{deps})))
