(env
  (dev
    (flags (:standard -warn-error -8))))

(ocamlyacc protocol_parser)
(ocamllex protocol_lexer)

;;(library 
;; (name server)
;; (modules (:standard))
;; (libraries str first_order util)
;;)


(executable 
  (name proof_server)
  (modes byte exe)
  (modules (:standard))
  (libraries  threads ocaml-protoc-plugin mtime mtime.clock.os cmdliner logs logs.cli logs.fmt fmt.cli str first_order util kernel_prop prop)
)
;;From https://github.com/issuu/ocaml-protoc-plugin
(rule
 (targets google_include)
 (action (with-stdout-to %{targets}
          (system "pkg-config protobuf --variable=includedir"))))

(rule
 (targets server_protocol.ml)
 (deps
  (:proto server_protocol.proto))
 (action
  (run protoc -I%{read-lines:google_include} -I.  "--ocaml_opt=annot=[@@deriving show { with_path = false }, eq]" --ocaml_out=. %{proto})))
