(env
  (dev
    (flags (:standard -warn-error -8))))

(ocamlyacc protocol_parser)
(ocamllex protocol_lexer)

;;(library 
;; (name server)
;; (modules (:standard))
;; (libraries str first_order util)
;;)


(executable 
  (name proof_server)
  (modes byte exe)
  (modules (:standard))
  (libraries threads cmdliner logs logs.cli logs.fmt fmt.cli str first_order utilities kernel_prop_interp kernel_prop_compile)
)
