(env
 (dev
  (flags (:standard -warn-error -27-32))))

(library 
 (name kernel_prop_interp)
 (instrumentation (backend bisect_ppx))
  (modules (:standard))
 (libraries fmt logs utilities dyp kernel))

(rule
 (targets prop_parser.ml)
 (deps    (:input-file prop_parser.dyp))
 (action  (chdir %{project_root} (run %{bin:dypgen} --noemit-token-type --no-pp --no-obj-type --no-mli %{input-file}))))
